--- a/src/shared/style/cartAdderForCustomization.scss
+++ b/src/shared/style/cartAdderForCustomization.scss
@@ -1,6 +1,6 @@
 @import "global";
 
-.vip-cart-adder {
+.customization-cart-adder {
   label,
   div {
     @include text(normal, 1rem, $prime-color);
